unpackaged/main/default/objects/Contrato__c/fields/Accion__c.field-meta.xml
<CustomField>
    <fullName>Accion__c</fullName>
    <label>Accion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>