unpackaged/main/default/objects/Contrato__c/fields/ApoderadoLegal__c.field-meta.xml
<CustomField>
    <fullName>ApoderadoLegal__c</fullName>
    <label>Apoderado Legal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>