unpackaged/main/default/objects/Contrato__c/fields/C_digo_Postal__c.field-meta.xml
<CustomField>
    <fullName>C_digo_Postal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código Postal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Municipio__c</field>
            <operation>equals</operation>
            <valueField>Codigo_Postal__c.Municipio__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Codigo_Postal__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>