unpackaged/main/default/objects/Contrato__c/fields/Calle_y_Numero__c.field-meta.xml
<CustomField>
    <fullName>Calle_y_Numero__c</fullName>
    <label>Calle y Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>