unpackaged/main/default/objects/Contrato__c/fields/CentroCosto__c.field-meta.xml
<CustomField>
    <fullName>CentroCosto__c</fullName>
    <label>Centro de Costo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>