unpackaged/main/default/objects/Contrato__c/fields/Colonia__c.field-meta.xml
<CustomField>
    <fullName>Colonia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colonia</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Colonia__c.Codigo_Postal__c</field>
            <operation>equals</operation>
            <valueField>Colonia__c.Codigo_Postal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Colonia__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>