unpackaged/main/default/objects/Contrato__c/fields/CompaniasKontrol__c.field-meta.xml
<CustomField>
    <fullName>CompaniasKontrol__c</fullName>
    <label>CompaniasKontrol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>