unpackaged/main/default/objects/Contrato__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <label>Concepto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>