unpackaged/main/default/objects/Contrato__c/fields/Conjunto__c.field-meta.xml
<CustomField>
    <fullName>Conjunto__c</fullName>
    <label>Conjunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>