unpackaged/main/default/objects/Contrato__c/fields/ContactoVendedor__c.field-meta.xml
<CustomField>
    <fullName>ContactoVendedor__c</fullName>
    <label>ContactoVendedor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>