unpackaged/main/default/objects/Contrato__c/fields/Contratista__c.field-meta.xml
<CustomField>
    <fullName>Contratista__c</fullName>
    <label>Contratista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>