unpackaged/main/default/objects/Contrato__c/fields/ContratoTipo__c.field-meta.xml
<CustomField>
    <fullName>ContratoTipo__c</fullName>
    <label>Orden o Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>