unpackaged/main/default/objects/Contrato__c/fields/Creado__c.field-meta.xml
<CustomField>
    <fullName>Creado__c</fullName>
    <label>Fecha de Creación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>