unpackaged/main/default/objects/Contrato__c/fields/CreadoPor__c.field-meta.xml
<CustomField>
    <fullName>CreadoPor__c</fullName>
    <label>Creado Por</label>
    <length>50</length>
    <type>Text</type>
</CustomField>