unpackaged/main/default/objects/Contrato__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Direccion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>