unpackaged/main/default/objects/Contrato__c/fields/Escritura__c.field-meta.xml
<CustomField>
    <fullName>Escritura__c</fullName>
    <label>Escritura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>