unpackaged/main/default/objects/Contrato__c/fields/Estado_al_que_pertenece_la_notaria__c.field-meta.xml
<CustomField>
    <fullName>Estado_al_que_pertenece_la_notaria__c</fullName>
    <formula>TEXT(Notar_a__r.Estado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado al que pertenece la Notaría</label>
    <type>Text</type>
</CustomField>