unpackaged/main/default/objects/Contrato__c/fields/Estado_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Estado_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>