unpackaged/main/default/objects/Contrato__c/fields/EstatusSolicitud__c.field-meta.xml
<CustomField>
    <fullName>EstatusSolicitud__c</fullName>
    <label>EstatusSolicitud</label>
    <length>50</length>
    <type>Text</type>
</CustomField>