unpackaged/main/default/objects/Contrato__c/fields/Fecha_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Contrato__c</fullName>
    <label>Fecha Contrato</label>
    <type>Date</type>
</CustomField>