unpackaged/main/default/objects/Contrato__c/fields/FechaFirmaContrato__c.field-meta.xml
<CustomField>
    <fullName>FechaFirmaContrato__c</fullName>
    <label>Fecha de Firma de Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>