unpackaged/main/default/objects/Contrato__c/fields/FechaInicioObra__c.field-meta.xml
<CustomField>
    <fullName>FechaInicioObra__c</fullName>
    <label>Fecha de Inicio de Obra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>