unpackaged/main/default/objects/Contrato__c/fields/FechaTerminoObra__c.field-meta.xml
<CustomField>
    <fullName>FechaTerminoObra__c</fullName>
    <label>Fecha de Termino de Obra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>