unpackaged/main/default/objects/Contrato__c/fields/Fianza__c.field-meta.xml
<CustomField>
    <fullName>Fianza__c</fullName>
    <label>Fianza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>