unpackaged/main/default/objects/Contrato__c/fields/Folio_Real__c.field-meta.xml
<CustomField>
    <fullName>Folio_Real__c</fullName>
    <label>Folio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>