unpackaged/main/default/objects/Contrato__c/fields/Fondo_de_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Fondo_de_Reserva__c</fullName>
    <label>Fondo de Reserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>