unpackaged/main/default/objects/Contrato__c/fields/FondoGarantiaDias__c.field-meta.xml
<CustomField>
    <fullName>FondoGarantiaDias__c</fullName>
    <label>Días de Fondo de Garantia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>