unpackaged/main/default/objects/Contrato__c/fields/FondoGarantiaPorciento__c.field-meta.xml
<CustomField>
    <fullName>FondoGarantiaPorciento__c</fullName>
    <label>Porcentaje de Fondo de Garantia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>