unpackaged/main/default/objects/Contrato__c/fields/Fraccionamiento_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>