unpackaged/main/default/objects/Contrato__c/fields/ImporteAnticipo__c.field-meta.xml
<CustomField>
    <fullName>ImporteAnticipo__c</fullName>
    <label>Importe de Anticipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>