unpackaged/main/default/objects/Contrato__c/fields/ImporteContrato__c.field-meta.xml
<CustomField>
    <fullName>ImporteContrato__c</fullName>
    <label>Importe de Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>