unpackaged/main/default/objects/Contrato__c/fields/ImporteMolde__c.field-meta.xml
<CustomField>
    <fullName>ImporteMolde__c</fullName>
    <label>Importe de Molde</label>
    <length>255</length>
    <type>Text</type>
</CustomField>