unpackaged/main/default/objects/Contrato__c/fields/No_de_Control__c.field-meta.xml
<CustomField>
    <fullName>No_de_Control__c</fullName>
    <displayFormat>CONT-{000000}</displayFormat>
    <label>No de Control</label>
    <type>AutoNumber</type>
</CustomField>