unpackaged/main/default/objects/Contrato__c/fields/Nombre_del_Notario__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Notario__c</fullName>
    <formula>Notar_a__r.Notario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Notario</label>
    <type>Text</type>
</CustomField>