unpackaged/main/default/objects/Contrato__c/fields/Nombre_del_notario_contratos__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_notario_contratos__c</fullName>
    <description>Nombre_del_notario_contratos texto libre</description>
    <label>Nombre del Notario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>