unpackaged/main/default/objects/Contrato__c/fields/NombreJefe__c.field-meta.xml
<CustomField>
    <fullName>NombreJefe__c</fullName>
    <label>NombreJefe</label>
    <length>50</length>
    <type>Text</type>
</CustomField>