unpackaged/main/default/objects/Contrato__c/fields/NomRepLegal__c.field-meta.xml
<CustomField>
    <fullName>NomRepLegal__c</fullName>
    <label>NomRepLegal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>