unpackaged/main/default/objects/Contrato__c/fields/Notar_a__c.field-meta.xml
<CustomField>
    <fullName>Notar_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notaría</label>
    <referenceTo>Notaria__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>