unpackaged/main/default/objects/Contrato__c/fields/Notaria_Contratos__c.field-meta.xml
<CustomField>
    <fullName>Notaria_Contratos__c</fullName>
    <description>Notaria de contratos con Texto libre</description>
    <label>Notaria</label>
    <length>60</length>
    <type>Text</type>
</CustomField>