unpackaged/main/default/objects/Contrato__c/fields/Notario_De__c.field-meta.xml
<CustomField>
    <fullName>Notario_De__c</fullName>
    <label>Estado al que pertenece la Notaría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estado</valueSetName>
    </valueSet>
</CustomField>