unpackaged/main/default/objects/Contrato__c/fields/Notario_de_formula__c.field-meta.xml
<CustomField>
    <fullName>Notario_de_formula__c</fullName>
    <formula>TEXT(Notar_a__r.Estado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado de Notario</label>
    <type>Text</type>
</CustomField>