unpackaged/main/default/objects/Contrato__c/fields/platform__c.field-meta.xml
<CustomField>
    <fullName>platform__c</fullName>
    <label>platform</label>
    <length>50</length>
    <type>Text</type>
</CustomField>