unpackaged/main/default/objects/Contrato__c/fields/RazonSocialNombre__c.field-meta.xml
<CustomField>
    <fullName>RazonSocialNombre__c</fullName>
    <label>RazonSocialNombre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>