unpackaged/main/default/objects/Contrato__c/fields/Registro_de_la_propiedad__c.field-meta.xml
<CustomField>
    <fullName>Registro_de_la_propiedad__c</fullName>
    <label>Registro de la propiedad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>