unpackaged/main/default/objects/Contrato__c/fields/Tipo_de_Contrato_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Contrato_Picklist__c</fullName>
    <label>Tipo de Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrato Compra - Venta</fullName>
            </value>
            <value>
                <fullName>Contrato Preventa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>