unpackaged/main/default/objects/Contrato__c/fields/Tipo_de_Fondo_de_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Fondo_de_Reserva__c</fullName>
    <label>Tipo de Fondo de Reserva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por metro cuadrado de superficie de construcción</fullName>
            </value>
            <value>
                <fullName>Por porcentaje de indiviso</fullName>
            </value>
            <value>
                <fullName>Por cuota fija</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>