unpackaged/main/default/objects/Contrato__c/fields/TipoContrato__c.field-meta.xml
<CustomField>
    <fullName>TipoContrato__c</fullName>
    <label>Tipo de Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>