unpackaged/main/default/objects/Contrato__c/fields/TipoProveedor__c.field-meta.xml
<CustomField>
    <fullName>TipoProveedor__c</fullName>
    <label>TipoProveedor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>