unpackaged/main/default/objects/Contrato__c/fields/Titulo_de_Propiedad__c.field-meta.xml
<CustomField>
    <fullName>Titulo_de_Propiedad__c</fullName>
    <label>Título de Propiedad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>