unpackaged/main/default/objects/Contrato__c/fields/Tramite__c.field-meta.xml
<CustomField>
    <fullName>Tramite__c</fullName>
    <label>Tramite</label>
    <length>50</length>
    <type>Text</type>
</CustomField>