unpackaged/main/default/objects/Contrato__c/fields/UEN__c.field-meta.xml
<CustomField>
    <fullName>UEN__c</fullName>
    <label>UEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>