unpackaged/main/default/objects/Contrato__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <label>Usuario Aprobador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>