unpackaged/main/default/objects/Contrato__c/fields/UsuarioJefeInmediato__c.field-meta.xml
<CustomField>
    <fullName>UsuarioJefeInmediato__c</fullName>
    <label>UsuarioJefeInmediato</label>
    <length>50</length>
    <type>Text</type>
</CustomField>