unpackaged/main/default/objects/Contrato__c/fields/Vigencia_estructural__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_estructural__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Vigencia estructural</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>