unpackaged/main/default/objects/Contrato__c/fields/Vigencia_impermeabilizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_impermeabilizaci_n__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Vigencia impermeabilización</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>