unpackaged/main/default/objects/Contrato__c/fields/Vigencia_instalaciones_y_otros__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_instalaciones_y_otros__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Vigencia instalaciones y otros</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>