unpackaged/main/default/objects/Contrato__c/recordTypes/Contrato_Compra_Venta.recordType-meta.xml
<RecordType>
    <fullName>Contrato_Compra_Venta</fullName>
    <active>true</active>
    <label>Contrato Compra- Venta</label>
</RecordType>