unpackaged/main/default/objects/Contrato__c/recordTypes/Contrato_Preventa.recordType-meta.xml
<RecordType>
    <fullName>Contrato_Preventa</fullName>
    <active>true</active>
    <label>Contrato Preventa</label>
</RecordType>