unpackaged/main/default/objects/Contrato__c/listViews/Contratos_Junio.listView-meta.xml
<ListView>
    <fullName>Contratos_Junio</fullName>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>Creado__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Accion_Formula__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Contratos Junio</label>
</ListView>