unpackaged/main/default/objects/Contrato__c/listViews/Todos_los_Contratos.listView-meta.xml
<ListView>
    <fullName>Todos_los_Contratos</fullName>
    <columns>NAME</columns>
    <columns>Tipo_de_Contrato_Picklist__c</columns>
    <columns>Estatus__c</columns>
    <columns>Fecha_Contrato__c</columns>
    <columns>Fraccionamiento_Lookup__c</columns>
    <columns>Escritura__c</columns>
    <columns>Notar_a__c</columns>
    <columns>Nombre_del_Notario__c</columns>
    <columns>Estado_al_que_pertenece_la_notaria__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los Contratos</label>
</ListView>